--- a/trackvisualizer/packages.config
+++ b/trackvisualizer/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="Autofac" version="4.9.4" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net45" />
+  <package id="SharpKml.Core" version="5.1.0" targetFramework="net45" />
 </packages>
