template html report exporter

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -10,3 +10,4 @@ share-links-active:
 
 github:
   zip_url: https://shorstok.github.io/trk/trk-release.zip
+  tar_url: https://shorstok.github.io/trk/trk-release.zip
