--- a/trackvisualizer/packages.config
+++ b/trackvisualizer/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Autofac" version="4.9.4" targetFramework="net45" />
+  <package id="LiveCharts" version="0.9.7" targetFramework="net45" />
+  <package id="LiveCharts.Wpf" version="0.9.7" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net45" />
   <package id="SharpKml.Core" version="5.1.0" targetFramework="net45" />
 </packages>
