--- a/trackvisualizer/trk.csproj
+++ b/trackvisualizer/trk.csproj
@@ -61,6 +61,12 @@
     <Reference Include="Autofac, Version=4.9.4.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
       <HintPath>..\packages\Autofac.4.9.4\lib\net45\Autofac.dll</HintPath>
     </Reference>
+    <Reference Include="LiveCharts, Version=0.9.7.0, Culture=neutral, PublicKeyToken=0bc1f845d1ebb8df, processorArchitecture=MSIL">
+      <HintPath>..\packages\LiveCharts.0.9.7\lib\net45\LiveCharts.dll</HintPath>
+    </Reference>
+    <Reference Include="LiveCharts.Wpf, Version=0.9.7.0, Culture=neutral, PublicKeyToken=0bc1f845d1ebb8df, processorArchitecture=MSIL">
+      <HintPath>..\packages\LiveCharts.Wpf.0.9.7\lib\net45\LiveCharts.Wpf.dll</HintPath>
+    </Reference>
     <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.12.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
@@ -132,6 +138,7 @@
     <Compile Include="View\VisibilityAux.cs" />
     <Compile Include="Vm\DownloadProgressItemVm.cs" />
     <Compile Include="Vm\HeightmapManagerVm.cs" />
+    <Compile Include="Vm\TrackChartVm.cs" />
     <Compile Include="Vm\TrackManagerVm.cs" />
     <Compile Include="Vm\TrackReportItemVm.cs" />
     <Compile Include="Vm\TrackReportTotalsVm.cs" />
