--- a/trackvisualizer/trk.csproj
+++ b/trackvisualizer/trk.csproj
@@ -288,4 +288,33 @@
   <Target Name="AfterBuild">
   </Target>
   -->
+  <UsingTask TaskName="ReplaceFileText" TaskFactory="CodeTaskFactory" AssemblyFile="$(MSBuildToolsPath)\Microsoft.Build.Tasks.v4.0.dll">
+    <ParameterGroup>
+      <InputFilename ParameterType="System.String" Required="true" />
+      <OutputFilename ParameterType="System.String" Required="true" />
+      <MatchExpression ParameterType="System.String" Required="true" />
+      <ReplacementText ParameterType="System.String" Required="true" />
+    </ParameterGroup>
+    <Task>
+      <Reference Include="System.Core" />
+      <Using Namespace="System" />
+      <Using Namespace="System.IO" />
+      <Using Namespace="System.Text.RegularExpressions" />
+      <Code Type="Fragment" Language="cs"><![CDATA[
+            File.WriteAllText(
+                OutputFilename,
+                Regex.Replace(File.ReadAllText(InputFilename), MatchExpression, ReplacementText)
+                );
+          ]]></Code>
+    </Task>
+  </UsingTask>
+  <Target Name="AfterBuild">
+    <GetAssemblyIdentity AssemblyFiles="$(TargetPath)">
+      <Output TaskParameter="Assemblies" ItemName="MyAssemblyIdentities" />
+    </GetAssemblyIdentity>
+    <ReplaceFileText InputFilename="..\docs\index-template.md" OutputFilename="..\docs\index.md" MatchExpression="\$version\$" ReplacementText="%(MyAssemblyIdentities.Version)" />
+  </Target>
+  <PropertyGroup>
+    <PostBuildEvent>if $(ConfigurationName) == Release (powershell Compress-Archive -Path '$(TargetDir)*.dll',  '$(TargetDir)*.config' -DestinationPath '$(SolutionDir)docs\trk-release.zip' -Force)</PostBuildEvent>
+  </PropertyGroup>
 </Project>
